# PolyFut

./: .gitignore  CNAME  Dockerfile  README.md  calculations.js  docker-compose.yml  help.js  index.html  keep_awake.py  launcher.py  requirements.txt  script.js  server.py  style.css
.github/workflows/: deploy-website.yml
FutFidget/: index.html
cv/: README.md  pyproject.toml
cv/scripts/: ball_recall_spike.py  eval_segments.py  export_openvino.py  sample_color.py
cv/src/polyfut_cv/: __init__.py  blur_detect.py  cli.py  clip_export.py  color_classify.py  cut_detect.py  detect.py  eval.py  geometry.py  optimize.py  pipeline.py  pitch_mask.py  possession.py  preprocess.py  team_colors.py  track_smooth.py
packaging/: build_mac.sh  build_win.ps1  make_icon.py  polyfut_installer.iss  pyinstaller.spec  sync_version.ps1
polyfut_video/: __init__.py  config.py  main.py  requirements.txt
polyfut_video/pipeline/: __init__.py  ball_smooth.py  deadtime_filter.py  decode.py  detection.py  frame_router.py  geometry.py  possession.py  shot_filter.py  team_classify.py  team_preview.py  timestamps.py  tracking.py
polyfut_video/scripts/: benchmark_yolo_calls.py  check_stages_12.py  check_stages_12_output.txt  e2e_http_smoke.py  estimate_runtime.py  profile_inference.py  simulate_touch_pipeline.py
polyfut_video/tests/: conftest.py  (+14 more)
sample_data/: README.md  angle_ranges.example.yaml  baseline_eval.json  baseline_eval.template.json  labels.json  labels.template.json  labels_elevated.json  labels_sideline.json
website/: CNAME  index.html  netlify.toml  style.css  version.json
(+2 files in other folders)
